20250101_daily_arxiv_update

--- a/arxiv/2024_12_arxiv.html
+++ b/arxiv/2024_12_arxiv.html
@@ -269,6 +269,21 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18057">https://arxiv.org/abs/2412.18057</a></span> Emergence of topological defects and spin liquid in a two-orbital spin-fermion model on the honeycomb lattice</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18528">https://arxiv.org/abs/2412.18528</a></span> Systematic Constructions of Interfaces and Anomalous Boundaries for Fermionic Symmetry-Protected Topological Phases ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.17895">https://arxiv.org/abs/2412.17895</a></span> A landscape of 4d N =1 SCFTs with a=c (Monica Jinwoo Kang, Craig Lawrie, Ki-Hong Lee, Jaewon Song)</p>
+<br>
+<p class="p1">20241230</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18737">https://arxiv.org/abs/2412.18737</a></span><span class="Apple-converted-space">  </span>The moments of the spectral form factor in SYK</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.19803">https://arxiv.org/abs/2412.19803</a></span> A local automaton for the 2D toric code ***** (Shankar Balasubramanian, Margarita Davydova, Ethan Lake)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18973">https://arxiv.org/abs/2412.18973</a></span> Derandomized shallow shadows: Efficient Pauli learning with bounded-depth circuits (Mikhail Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.19565">https://arxiv.org/abs/2412.19565</a></span> Effective field theory of the quantum skyrmion Hall effect</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.19632">https://arxiv.org/abs/2412.19632</a></span> Concealed Mott Criticality: Unifying the Kondo Breakdown and Doped Charge-Transfer Insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.19635">https://arxiv.org/abs/2412.19635</a></span> A non-semisimple non-invertible symmetry ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.19691">https://arxiv.org/abs/2412.19691</a></span> Quantum Many-Body Lattice C-R-T Symmetry: Fractionalization, Anomaly, and Symmetric Mass Generation (Yang-Yang Li, Juven Wang, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.20647">https://arxiv.org/abs/2412.20647</a></span> Microscopic theory of pair density waves in spin-orbit coupled Kondo lattice (Aaditya Panigrahi, Alexei Tsvelik, Piers Coleman)</p>
+<p class="p2"><br></p>
+<p class="p1">20241231</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.21066">https://arxiv.org/abs/2412.21066</a></span> 3d N = 4 Mirror Symmetry, TQFTs, and ’t Hooft Anomaly Matching</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.20546">https://arxiv.org/abs/2412.20546</a></span> Non-invertible SPTs: an on-site realization of (1+1)d anomaly-free fusion category symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.16795">https://arxiv.org/abs/2412.16795</a></span> Introduction to Black Hole Thermodynamics ***** (Edward Witten)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
