--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	</style>-->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
-	--><li><b>[Mar. 2025]</b> I have given a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
+	--><li><b>[Mar. 2025]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
 			</li>
 			<li><b>[Nov. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2411.16842" style="font-style: italic;">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality (arXiv:2411.16842)"</a> has been posted on arXiv!
 						</li>
