20250104_daily_arXiv_news_update

--- a/arxiv/2025_01_arxiv.html
+++ b/arxiv/2025_01_arxiv.html
@@ -43,7 +43,19 @@
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
-<p class="p1">202501</p>
+<p class="p1">20250103</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00572">https://arxiv.org/abs/2501.00572</a></span> Intrinsic (Axion) Statistical Topological Insulator (Zhen Bi, Zhi-Da Song)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.01107">https://arxiv.org/abs/2501.01107</a></span> On Computational Complexity of 3D Ising Spin Glass: Lessons from D-Wave Annealer ** (Alex Kamenev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00096">https://arxiv.org/abs/2501.00096</a></span> Evidence for a Z2 Dirac spin liquid in the generalized Shastry-Sutherland model ***** (Atanu Maity, Francesco Ferrari, Jong Yeon Lee, Janik Potten, Tobias Mu ̈ller, Ronny Thomale, Rhine Samajdar, Yasir Iqbal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00100">https://arxiv.org/abs/2501.00100</a></span> Universal Wilson loop Bound of Quantum Geometry: Z2 Bound and Physical Consequences *** (Jiabin Yu, Jonah Herzog-Arbeitman, B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00098">https://arxiv.org/abs/2501.00098</a></span> Quantum Geometry in Quantum Materials ***** (Jiabin Yu, B. Andrei Bernevig, Raquel Queiroz, Enrico Rossi, P ̈aivi T ̈orm ̈a, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00247">https://arxiv.org/abs/2501.00247</a></span> Spectra of Magnetoroton and Chiral Graviton Modes of Fractional Chern Insulator (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00675">https://arxiv.org/abs/2501.00675</a></span> Exploiting Parallelism for Fast Feynman Diagrammatics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00388">https://arxiv.org/abs/2501.00388</a></span> Topic Review: Hatsugai-Kohmoto models: Exactly solvable playground for Mottness and Non-Fermi Liquid *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.16270">https://arxiv.org/abs/2103.16270</a></span> Thermodynamic and Real-time Dynamic Properties of Complex Sachdev-Ye-Kitaev Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00518">https://arxiv.org/abs/2501.00518</a></span> Tricritical behavior of a relativistic field theory in one dimension ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00447">https://arxiv.org/abs/2501.00447</a></span> The Physics of Quantum 2.0: Challenges in understanding Quantum Matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02547">https://arxiv.org/abs/2307.02547</a></span> Evolution of entanglement entropy at SU(N) deconfined quantum critical points (Menghan Song, Jiarui Zhao, Meng Cheng, Cenke Xu, Michael M. Scherer, Lukas Janssen, Zi Yang Meng)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
