--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	--><li><b>[Mar. 2025]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
+			<li><b>[Jan. 2025]</b> I will give an invited talk at Hanyang University in Seoul, Korean on January 9th.
+			</li>
+			<li><b>[Jan. 2025]</b> I will give an invited talk at KAIST in Daejeon, Korean on January 8th.
+			</li>
+			<li><b>[Jan. 2025]</b> I have been Korea for the month of January 2025.
 			</li>
 			<li><b>[Nov. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2411.16842" style="font-style: italic;">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality (arXiv:2411.16842)"</a> has been posted on arXiv!
 						</li>
@@ -109,14 +114,13 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 		</li>
 		<li><b>[Mar. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2403.09627" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been posted on arXiv!
 				</li>
+		</ul>
+<details class="description" close><summary data-open="[Close]" data-close="Past News"></summary>
+	<ul>
 		<li><b>[Mar. 2024]</b> I have given a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR24/Session/A07.5" style="font-style: italic;">"Bosonization of Non-Fermi Liquids" (2023/03/04 08:48 AM, Room L100H)</a> at APS march meeting 2024, Minneapolis, Minnesota, USA!
 <!--			<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><img src="img/march2023_ads.png" width="100%" alt="Summary of Talk"></details></div>
 			-->
 			</li>
-		</ul>
-<details class="description" close><summary data-open="[Close]" data-close="Past News"></summary>
-	<ul>
-
 		<li><b>[Sep. 2023]</b> I joined <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="font-style: italic;">Professor Igor Herbut's group</a>, at <span style="font-style: italic;">Simon Fraser University, Burnaby, Canada</span>.
 			</li>
 		<li><b>[Aug. 2023]</b> I have moved to Vancouver! My new email address is 'sangeun_han at sfu.ca'.
