20250119_daily_arxiv_CV_talk_update1

--- a/arxiv/2025_01_arxiv.html
+++ b/arxiv/2025_01_arxiv.html
@@ -56,6 +56,105 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00518">https://arxiv.org/abs/2501.00518</a></span> Tricritical behavior of a relativistic field theory in one dimension ****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00447">https://arxiv.org/abs/2501.00447</a></span> The Physics of Quantum 2.0: Challenges in understanding Quantum Matter</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02547">https://arxiv.org/abs/2307.02547</a></span> Evolution of entanglement entropy at SU(N) deconfined quantum critical points (Menghan Song, Jiarui Zhao, Meng Cheng, Cenke Xu, Michael M. Scherer, Lukas Janssen, Zi Yang Meng)</p>
+<br>
+<p class="p1">20250106</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.01666">https://arxiv.org/abs/2501.01666</a></span> Topological Anderson insulators by latent symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.01838">https://arxiv.org/abs/2501.01838</a></span> Electronic band structures of topological kagome materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.01944">https://arxiv.org/abs/2501.01944</a></span> Quasi-topological fractons: a 3D dipolar gauge theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.01888">https://arxiv.org/abs/2501.01888</a></span> Out-of-plane Edelstein effects: Electric-field induced magnetization in p-wave magnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.01501">https://arxiv.org/abs/2501.01501</a></span> Dissipation-enhanced non-reciprocal superconductivity: application to multi-valley superconductors (Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.01797">https://arxiv.org/abs/2501.01797</a></span> Ohm’s law, Joule heat, and Planckian dissipation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.01734">https://arxiv.org/abs/2501.01734</a></span> Enhanced Condensation Through Rotation **** (Maxim Chernodub, Frank Wilczek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.03667">https://arxiv.org/abs/2412.03667</a></span> Lie, Noether, Kosmann, and Diffeomorphism Anomalies Redux (Taeyeon Kim, Piljin Yi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00095">https://arxiv.org/abs/2501.00095</a></span> Tantum Gravity ****</p>
+<p class="p3"><br></p>
+<p class="p1">20250107</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.02185">https://arxiv.org/abs/2501.02185</a></span> Quasi-one-dimensional Supersolids in Luther-Emery Liquids (Ying-Ming Xie, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.03106">https://arxiv.org/abs/2501.03106</a></span> Cavity quantum electrodynamics of photonic temporal crystals (Bumki Min, Kun Woo Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.03084">https://arxiv.org/abs/2501.03084</a></span> Stable excitations and holographic transportation in tensor networks of critical spin chains</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.02073">https://arxiv.org/abs/2501.02073</a></span> Symmetry and causality constraints on Fermi liquids ***** (Luca V. Delacr ́etaz, Subham Dutta Chowdhury, Umang Mehta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.02351">https://arxiv.org/abs/2501.02351</a></span> High Temperature Superconductivity in the Cuprates: Phenomena from a Theorist′s Point of View</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.02947">https://arxiv.org/abs/2501.02947</a></span> Colour symmetry and non-collinear altermagnetism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.02500">https://arxiv.org/abs/2501.02500</a></span> Effect of Impurity on Inhomogeneous Vacuum and Interacting Vortices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03045">https://arxiv.org/abs/2204.03045</a></span> Generalized Symmetries in Condensed Matter ***** (John McGreevy)</p>
+<p class="p3"><br></p>
+<p class="p1">20250108</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.03367">https://arxiv.org/abs/2501.03367</a></span> Evolved Quantum Boltzmann Machines (Mark M. Wilde)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.03851">https://arxiv.org/abs/2501.03851</a></span> Gapless Symmetry-Protected Topological States in Measurement-Only Circuits *** (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.03314">https://arxiv.org/abs/2501.03314</a></span> Soft symmetries of topological orders ***** (Ryohei Kobayashi, Maissam Barkeshli)</p>
+<p class="p3"><br></p>
+<p class="p1">20250109</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04465">https://arxiv.org/abs/2501.04465</a></span> Probability distributions of the order parameter of the O(N) model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04649">https://arxiv.org/abs/2501.04649</a></span> Extracting the spin excitation spectrum of a fermionic system using a quantum processor</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.03498">https://arxiv.org/abs/2501.03498</a></span> Transitions from Composite Fermi Liquid to Moore-Read States in Weyl Semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04660">https://arxiv.org/abs/2501.04660</a></span> Hot wormholes and chaos dynamics in a two-coupled SYK model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.12299">https://arxiv.org/abs/2412.12299</a></span> An Open Effective Field Theory for light in a medium ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04651">https://arxiv.org/abs/2501.04651</a></span> FeynGame 3.0</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.19635">https://arxiv.org/abs/2412.19635</a></span> A non-semisimple non-invertible symmetry ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2407.17408">https://arxiv.org/abs/2407.17408</a></span> Generalized Uncertainty Principle theories and their classical interpretation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04261">https://arxiv.org/abs/2501.04261</a></span> On the θ-angle physics of QCD under pressure: The strange and isospin phase diagram</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04320">https://arxiv.org/abs/2501.04320</a></span> The probability for chiral oscillation of Majorana neutrino in Quantum Field Theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04498">https://arxiv.org/abs/2501.04498</a></span> Reflections of topological properties in the planar-Hall response for semimetals carrying pseudospin-1 quantum numbers (Ipsita Mandal)</p>
+<p class="p3"><br></p>
+<p class="p1">20250110</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05376">https://arxiv.org/abs/2501.05376</a></span> Correlated Hopf Insulators *** (Shouvik Sur)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05451">https://arxiv.org/abs/2501.05451</a></span> Interplay between altermagnetism and topological superconductivity in an unconventional superconducting platform (Vladimir Juriˇci ́c)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.14238">https://arxiv.org/abs/2412.14238</a></span> Twisted times, the Schwarzian and its deformations in DSSYK</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04769">https://arxiv.org/abs/2501.04769</a></span> Phase diagram, confining strings, and a new universality class in nematopolar matter *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04795">https://arxiv.org/abs/2501.04795</a></span> Phase Transitions in Quasi-Periodically Driven Quantum Critical Systems: Analytical Results (Xueda Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04865">https://arxiv.org/abs/2501.04865</a></span> Time Symmetries of Quantum Memory Improve Thermodynamic Efficiency</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.21196">https://arxiv.org/abs/2412.21196</a></span> Topological Responses of the Standard Model Gauge Group (Zheyan Wan, Juven Wang, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.00607">https://arxiv.org/abs/2501.00607</a></span> Topological Leptogenesis</p>
+<p class="p1">Juven Wang</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05416">https://arxiv.org/abs/2501.05416</a></span> Analytical control of the exchange interaction in periodically driven Mott insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.05786">https://arxiv.org/abs/2411.05786</a></span> (3+1)d boundary topological order of (4+1)d fermionic SPT state (Meng Cheng, Juven Wang, Xinping Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05400">https://arxiv.org/abs/2501.05400</a></span> A New Approach to the Representation Theory of Lorentzian Pseudo-Tensors</p>
+<p class="p3"><br></p>
+<p class="p1">20250113</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05658">https://arxiv.org/abs/2501.05658</a></span> Instability of the ferromagnetic phase under random fields in an Ising spin glass with correlated disorder (Hidetoshi Nishimori)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05608">https://arxiv.org/abs/2501.05608</a></span> Kitaev Quantum Spin Liquids ***** (Yuji Matsuda, Takasada Shibauchi, Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05794">https://arxiv.org/abs/2501.05794</a></span> Large N limits of supersymmetric quantum field theories: A pedagogical overview *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05905">https://arxiv.org/abs/2501.05905</a></span> Measurement and Teleportation in the cSYK/JT Correspondence</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05562">https://arxiv.org/abs/2501.05562</a></span> Kondo impurity in an attractive Fermi-Hubbard bath: Equilibrium and dynamics (Eugene A. Demler)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05915">https://arxiv.org/abs/2501.05915</a></span> The Kekule ́-Kitaev model: linear and non-linear responses and magnetic field effects</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.05849">https://arxiv.org/abs/2501.05849</a></span> Classification of T2/Zm orbifold boundary conditions in SO(N) gauge theories</p>
+<p class="p3"><br></p>
+<p class="p1">20250114</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07414">https://arxiv.org/abs/2501.07414</a></span> Engineering single-atom angular momentum eigenstates in an optical tweezer</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.06287">https://arxiv.org/abs/2501.06287</a></span> Boundary operator expansion and extraordinary phase transition in the tricritical O(N) model (Xinyu Sun, Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.06563">https://arxiv.org/abs/2501.06563</a></span> Scaling Analysis and Renormalization Group on the Mobility Edge in the Quantum Random Energy Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07388">https://arxiv.org/abs/2501.07388</a></span> BKT transitions of the XY and six-state clock models on the various two-dimensional lattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03381">https://arxiv.org/abs/2411.03381</a></span> Young Researchers School 2024 Maynooth: Lectures on CFT, BCFT and DCFT *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07372">https://arxiv.org/abs/2501.07372</a></span> Radiation eikonal for post-Minkowskian observables (Jung-Wook Kim (김정욱))</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.06860">https://arxiv.org/abs/2501.06860</a></span> Family Matters</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07243">https://arxiv.org/abs/2501.07243</a></span> Eigenstate Thermalization Hypothesis A Short Review *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07511">https://arxiv.org/abs/2501.07511</a></span> Minimal Models RG flows: non-invertible symmetries &amp; non-perturbative description *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.06616">https://arxiv.org/abs/2501.06616</a></span> Lecture notes on conformal field theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.10799">https://arxiv.org/abs/2406.10799</a></span> Toward a quantum field theoretical description of oscillation effects ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.17023">https://arxiv.org/abs/2406.17023</a></span> Corner Charge Fluctuation as an Observable for Quantum Geometry and Entanglement in Two-dimensional Insulators (Pok Man Tam, Jonah Herzog-Arbeitman, Jiabin Yu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.04040">https://arxiv.org/abs/2501.04040</a></span> A Survey on Large Language Models with some Insights on their Capabilities and Limitations *****</p>
+<p class="p3"><br></p>
+<p class="p1">20250115</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07781">https://arxiv.org/abs/2501.07781</a></span> Self-similar inverse cascade from generalized symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.08164">https://arxiv.org/abs/2501.08164</a></span> Gapless higher-order topology and corner states in Floquet systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07787">https://arxiv.org/abs/2501.07787</a></span> SymSETs and self-dualities under gauging non-invertible symmetries ***** (Da-Chuan Lu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07871">https://arxiv.org/abs/2501.07871</a></span> Disorder-Induced Slow Relaxation of Phonon Polarization (Shuichi Murakami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07906">https://arxiv.org/abs/2501.07906</a></span> Magnon-induced scalar spin chirality in Kagome and honeycomb ferromagnets (Se Kwon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07792">https://arxiv.org/abs/2501.07792</a></span> Hall Angle of a Spatially Random Vector Model (Sang-Jin Sin)</p>
+<p class="p3"><br></p>
+<p class="p1">20250116</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.08379">https://arxiv.org/abs/2501.08379</a></span> Fermion liquids as quantum Hall liquids in phase space: A unified approach for anomalies and responses ***** (Kun Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.08499">https://arxiv.org/abs/2501.08499</a></span> Design and Benchmarks for Emulating Kondo Dynamics on a Quantum Chip (Elio J. K ̈onig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.08646">https://arxiv.org/abs/2501.08646</a></span> Classification of pair symmetries in superconductors with unconventional magnetism ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.08422">https://arxiv.org/abs/2501.08422</a></span> SUSY design of smooth quantum rings in graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.08354">https://arxiv.org/abs/2501.08354</a></span> Feynman Diagrams *****</p>
+<p class="p3"><br></p>
+<p class="p1">20250117</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.09064">https://arxiv.org/abs/2501.09064</a></span> Generative diffusion model with inverse renormalization group flows</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.09567">https://arxiv.org/abs/2501.09567</a></span> Bridging conformal field theory and parton approaches to SU(n)k chiral spin liquids ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.09575">https://arxiv.org/abs/2501.09575</a></span> Critical relaxational dynamics at the continuous transitions of three-dimensional spin models with Z2 gauge symmetry (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.09197">https://arxiv.org/abs/2501.09197</a></span> Nonflat bands and chiral symmetry in magic-angle twisted bilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.03264">https://arxiv.org/abs/2309.03264</a></span> ABJ anomaly as a U(1) symmetry and Noether’s theorem</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
