--- a/index.html
+++ b/index.html
@@ -92,9 +92,13 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	--><li><b>[Mar. 2025]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
-			<li><b>[Jan. 2025]</b> I will give an invited talk at Hanyang University in Seoul, Korean on January 9th.
+			<li><b>[Jan. 2025]</b> I will give a talk at KIAS in Seoul, Korean on January 21st.
 			</li>
-			<li><b>[Jan. 2025]</b> I will give an invited talk at KAIST in Daejeon, Korean on January 8th.
+			<li><b>[Jan. 2025]</b> I will give a talk at Seoul National University in Seoul, Korean on January 17th.
+			</li>
+			<li><b>[Jan. 2025]</b> I will give a talk at Hanyang University in Seoul, Korean on January 9th.
+			</li>
+			<li><b>[Jan. 2025]</b> I will give a <a href="https://physics.kaist.ac.kr/index.php?mid=p_news_event3&document_srl=17645">talk at KAIST in Daejeon, Korean on January 8th</a>.
 			</li>
 			<li><b>[Jan. 2025]</b> I have been Korea for the month of January 2025.
 			</li>
@@ -145,7 +149,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20241127_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/11/27)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20250119_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/01/19)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -598,6 +602,46 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</div>
 	<div class="cvitemize"> <a id="invited" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Invited Talks</a> </div>
 	<ul><li><div>
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div>--> Condensed Matter Physics Seminar at KIAS </span>
+	<span class="cvperiod">Jan. 2025</span>
+	</div>
+	<div class="cvitemcontent"> <a href="https://kias.re.kr/kias/activities/seminars/view.do?seqno=PGN1720250113-0004&menuNo=404003&mjrcdnm=&sdate=2025-01-19&edate=&pageIndex=1">"Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
+
+	</li><li><div>
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div>--> CTP Seminar at Seoul National University </span>
+	<span class="cvperiod">Jan. 2025</span>
+	</div>
+	<div class="cvitemcontent"> "Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction" </div>	
+
+	</li><li><div>
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div>--> Condensed Matter Group Seminar at Hanyang University </span>
+	<span class="cvperiod">Jan. 2025</span>
+	</div>
+	<div class="cvitemcontent"> "Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction" </div>	
+
+	</li><li><div>
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div>--> Physics Seminar at KAIST </span>
+	<span class="cvperiod">Jan. 2025</span>
+	</div>
+	<div class="cvitemcontent"> <a href="https://physics.kaist.ac.kr/index.php?mid=p_news_event3&document_srl=17645">"Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
+
+	</li><li><div>
 	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
